--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-sharp": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
