--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-source-contentful": "^7.11.0",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
     "react": "^17.0.1",
