--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mysite20211120",
   "version": "1.0.0",
+  "private": true,
   "description": "mysite20211120",
   "author": "yokoyama",
   "keywords": [
